testsuites/LLT/compiler/Diagnose/lex_test/lex_unexpected_exponent_part/case2.expect.out
error: expected exponent part in hexadecimal float number '0x12.12e12'
  ==> case2.cj:14:12:
   | 
14 |     0x12.12e12
   |     ~~~~~~~~~~^ expected exponent part
   |     |
   |     because it is hexadecimal float number
   | 

1 error generated, 1 error printed.
